Fixing text clip on chrome in dark mode

--- a/assets/scss/_dark.scss
+++ b/assets/scss/_dark.scss
@@ -27,6 +27,7 @@
             h1 {
                 background: var(--text-title-dark);
                 background: linear-gradient(135deg, $blue-lt 0%, $purple-lt 67%);
+                -webkit-background-clip: text;
                 background-clip: text;
                 color: transparent;
             }
